lab1/Test/L1-A-5-61.cmm
float PJP4eA6j1y ( ) {
  struct ED4JuZil974IwpF1 {
    float LZVLBv9IWkfLc9IYegBB [ 1759794872 ] [ 785780487 
      ] , n7XfLQxEe = y8Zc3Yfasp5yMNBjAnI ;
    float ZjFl5izTcI_ZABQyi4m = ;
    float cVEM7hhZvnhqGiXP = Ohcq4u3XHidfx3 &;
  }Yuo = - - ! - xEhYtQ3pptJp0YC * ! - zHrnMgr5v7mPMK 
    == - - wZfRtaOv_rU_ + kyctxgdvBBh4nf1eu - Kh9gFBtH77 
    && 1346785523.357625922 - cxEneIRK4SwnQbfW - nlBnDgrDYX 
    - zgGIybXvaP2gb <= SBI_4YBtReaUHrKv > Hq_ZBLZb8A2uGr9a4 
    <= SBSFPKhC4CDDpOB3N < mNxO == MRbsj2JZt , Txo2P ;
  return ! ! r2wF1tQDM8 / ! ! - EMvtq3Q7Yx4vz2RJsL 
    - - a7KcawkC66CNWX6k ( ) * - e + ( ! ! wQZ0nt - hLfmpdwvqPxdZjDLX 
    - Jc_lZAXQJkexNLvFCKHl + kJ723pbU_YspXWP8m - yXML3ly 
    >= mjBxtj2LZJAbGCmADq > KAY08ThK_I > QnkVIuQRZn9cn4d 
    ) [ - azL4 = FHKtna6b3Z ] * ! HmFmmBe / Js7p [ R7a62DoyVHG0xRiTBQZ 
    ] + ! ! DMOAKV ( GGuski0lsvXHi ) / KGln7jhxe5y ( WP0JbmFOrX 
    ) . mhDUDIEa4B4YbOOw0AV_ . Plinf9Izy8 * vIz743NU2 
    ( ) * - h0xtBAoTwF / ! OtTf3SvkunyHR18UD5hY / ! bO7zuIPCDhkBL 
    > - - - YbsrP2 * ! GJOptKnGwTLpi6FU8F5I <= ! ! kh5AwqMccnJqa0Ros 
    ( ) - CDs5 ( I6ovoTXMJqXsDoC67 ) . FF0 + - O9iF3 >= 
    - - 2003736937 . L7sOQ87CuwumsEC [ J48mrhzcZ4WqBtv_NW6 
    ] * ! cmG + eXSIUEHKfAuD ( ) - - msIH_gQif / xV1 > 
    Ft95zrYQ3CHv6Zb ( ! sHsT5_16Z1fHyn5nFSJ = YrP ) / 
    - w_2zrzKlb9ckTHiB_tXy * ! wyJZSAvrx2j * ! hH / ! 
    Nk4O / ! r2YGNGD / - tQ09ZnQoOw3 * ! LdBzDh / - zs1aX 
    + - rT - XUtS ( eQ4F ) / WqGIBeeXbF26T / XqSmqKwUXfXmp2NDh9 
    / l < - - X8f9FG ( ysc4lGnUdCmgDoq ) * ! tJoFfdck5PUTkHBmgc 
    - zaw8LIZ_ur ( ) * KCGMraPd56GZKf4NMYI / EidG44n7IY29YyLm 
    * J7BaFOAFRNMrZ_HdY7uF * eqq8DrS8xgoB6Z1U * MKmA9fph 
    + ! zZsX / C <= WeWnd ( ) [ - M2_iI = H ] . u89xeVUczvx8Sw 
    * - T9h8WIbtxYG2SPk / ! pw1w1gXz8R - - kH4j / zZ3TGrBJ46oy4YNIMXDf 
    / A * sG8MpOYm6GZzUOSj * WE75zmAUxUd > OsYP2F6TRo7tSPEo0 
    > ! qGSlHo1nEY3n2 ( ) / - jfEvNS <= ! - ! uGTRq6SUgUU 
    * - vunTM5LgQuKq9oFc - - wRrfm8lhg1ckOXq - - maHklTuV4F 
    / kT7gZU / SMnn9Za16nTAGS * FcLb1OZp < 1768393773.2073501956 
    . Akn1E / - fo0e_AIy4Db / ! K8NI / - Yz9wi / - c7Oj5 
    * - eHhKmJ9CXJN >= ! - i_ ( XnMnZ678CfMa8OL6 ) && 
    gK8b64gSd ( - qV5hPONWk7MxXlIiQL * Nz6eXk < AIv1n0MlwFe 
    < vY4 == ktPx0eAohPV <= awPKOSm10VRIX8F43 <= r2WAHCdydq 
    >= X , maD_O2ufNoiJ ) * - tFsjNa2l4VwR / ! dROAFDX3f 
    * - Larm6 / ! lK1UQiTWL - Lw ( k9hCnhN1hgC6yfDNArn 
    ) - RQJpvYKzLlN_1v ( ) * ZzVkWblqcmO * vorQV - - A0fT7Sr 
    - ! evlyztdFbb / aHg3jPJzzIrkGg - sY8_ztZJKssejQiVa6 
    ( ) . cKfNIPs . Na8Mv9lqGUH1zeNvZrt * xaM - ! RJqyQKW6WQa0N 
    * CwJx < ! Yjwytm4eg98hLBfBs * o - KMFa23iuRP5AT >= 
    1138620029 / du3Z8VAk * DW * INnshc1bOgJjiJLarykC 
    * * yK5MrIGb9E4V / v9HmcMS59A_hJ * jzunzXRP6XE82Vvu 
    + ftzDTt5J59cfI5yU + qrkOaFErji == dmI4tm * twzz == 
    - _ * HBTNQMGBhPgEpVHV6V + r0vrs8D - PIlSxLQdImoK 
    - GhQGmIp - KA8R6JmeTvY5X3DO >= YTRyG ( NJ ) - pDlib1JNGikiWpEhI 
    + GmMG - zKPQevwvAqnFK0 + WyEQlkKRC + rqe32huOTSJa 
    >= YsUMNbveYT4Isb9ja9 ( O9c8GUNWwnOeCYO ) [ TQwTxuUCYx_VM 
    ] >= B8ouUq1LjJUPsNM ( ) * G2SlIV57LfQt3TbgAKUa * 
    xNLFzFPuFL5X / OUVYfS / djuPdX * w7MsE + xOv9AP3A46X 
    - GFp04FWZ <= ! vcqfxcqmjYSs * fJ1DBDBq766Jfrd * Us0o6lxXn_hIH 
    * uGFROlv / SxxSdo0Bfh3 / G_YUQxi / CvoS1lA2rDJ192J1jQP 
    / kU3rh_XmK77H0KBm - I9vQ_lI8Ubif - hyTEDNjz6A5FfVnV75N 
    - H1TQoU39DIf9I222j >= ! _h6Q6v / OOiJcZ3wrRO * _rrTw0zPNqytjbxd 
    / cSCy_zTxwE_r == E ( rTtY2W ) [ MeKtYp8i6xJ7YD7uuxFj 
    ] [ rMnokD4 ] * FVQRvUzDcD6aH3z * mR2DK * OGaf7zQ7zBP1L 
    / YUbYNeU * XkiUR6uo2 - yE5f6FpxATbEBLa < 2127475663.1673677145 
    / XPfUMHKmTGzE < SucltDHSZbxrC ( ) [ Sms7E2Nl5pW ] 
    * OM27LI409DyAyFQDDr >= on3dWr ( x1v9Q9sDJHB5jrh8MGK 
    ) [ z6D ] + em1xBLCZ + Y2bEAzh0QtYKra - mz44L >= - 
    i_v2YsHq / pBto - CF_m9HEaN - Yo35LHNZr5wO87RDGJ + 
    PcEJ4V2XwG2FSudg - QIRpvkwQUqUtK - S + dB72ru2NQh 
    + KrJ_GjuK4gLvS - JpILwA + S4p1y <= ! fHfVXdBN - P 
    > YrpE_H9nopj ( msaR0mvx ) / r5QCYUDBp * O3DU6MjGLoPJsZ3YwJuG 
    - rvGIRHl3CUG8n1g - MCM9ej > - fCwwdOn5LOJDyh0WCRq 
    / vAw0EIx_mAI1PK / CjxGxAtaMs348BQ4 < ! K4HSWEenJyR 
    / CnxEhEof_Nn95tR * EWjLy19zChvG / nzikshT + xHTcD4 
    - vbLi8 + j59JzCJeOv + hudq != XGtdDs ( ) [ ow ] [ 
    KbF8dw1kwiLs_UFCaSoY ] - P + qiarB5SkpPrnXY44u - N33x_54Guz5Ib 
    + tu7j9kG - VnW06eKRBEAnNjx4gkxv && - - - mFqYfzzHCQ 
    / - ptT7eYQDY_VsUXz6UZ <= IBclsF4bgn9CoavkoPmv * R58owbgwB_P26 
    * b9D3CVUOv9 * RdK9nBf2czWvChdz8h && - akOqFs ( KMw3tfwU63gD 
    ) / - hvzKfY * - uroUUFB3IzHcETUS * ! HmUqQ87xPX2Xzuoy 
    - - P * U1GkPBB9UOjVCU9 - - Omjb0NpcJUVZrDEjKolE / 
    lpDk_D_ * I3hVc * IFTs / ei0Ky3ZVRD / j_vFtyN * l 
    / qd * WfitReIZ5qfozXRGHG / oXHguvS1D / w6pk1UrvjUDjXZ 
    / kJrIYLJkJFd1 * JChcfyP / HH * v783tvYXk * JXeJN4vONPrPjRxxoGp 
    == ! FbGAVoJj3kIhO6Kvx * PwkF_v7zV00Y / SoXWTjySMzoFB 
    * FfEmELC5Edm3 / mor / OCIFAQiEHyPbFa * oiyIzcQxaSoeMUBhsB 
    - NJ6n8kQg - TiQ4lftRia8c0d3GzIIc - uf1SwPcPsY0XMvAnE 
    + cFPMjVGja6teCBGfS < fQtZZlX8ZrZxtO ( SiYOi6cpAkgG 
    ) / myk48kOG0KeZ * IoXwaiyjGk1f9 * Eb8WNbTIR6La21 
    / FyelAXSM0 - LK != - ZG3JMd95Soet * nm / _jOTp_1tcxzPpjA 
    / QSylimD / SnHgM2XYZJjky * Y5Bc2A0toCYZcEg * yzyTl8Zyx 
    - dZB0NHNLRrmS - GXLhmBdX0iu < c8E00fZ7mROdT_R ( ) 
    . KS1coQvLyPyLBA07LCfI [ dKXk9Pj1O7 ] . Vm * zuF7JXjGZtzVw_ 
    * fWkxPX9Pnz2b / LiZBHjrsm9dk36eCF / Q * DP / KZLv5 
    / G4 >= aYd ( ixjYYnzd4c7z ) * dl7QQFqa / F4BU3 / 
    INqTO / BwmbFHKNxF3UNMPM + cV59D_HKYNaRYTa8 + S - 
    Bh9iB3lTwkV9MYxP0jvJ - kEK_ + gbJy + Xw5esDbcQEfAce 
    + FQTp2Pka3veMqxT - Z272G8J7VpCdV < - nRfU2p65irleT7 
    - rq8EWqAnyVZkNdREXQ + GdJ1OPj6Wokp + YCkuMZ2qG - 
    lhtujfoG3Yfldl + rPUaHGn < - UCuBUeY5w0MMuqgwt_6_ 
    + NMJLq0nFfC - OTWzNpdgsVxoueQpERH != - pKxoKH3OuN 
    && ! T ( b6RkEF94GRGfS ) . cSg . NX04CLxUJvix [ F 
    ] - igOfKl5 ( ) [ O1iNwoq3PXDs89B0M ] + ! cOoJi2ODdkoZvGI2 
    * nQ - - qNqI / LYltUK / KRfv / bzmiF4XomKm78ngv29m 
    * fBdjzQ511cvaf_FEBP / Rr + ! sl * DWEmjGjeHGBLkl 
    * kqGQg / Yyb95bxygQXJkOF1wgI + - btAFH16RVNRuDLM9K20v 
    * TI / ac - ! kEm3R9K24uGbq3 / P5g4 + ! HTo4UOh8zWCTCuzx 
    * xfnjMwN4dwxIe + - cWOFv * J * oVM4i4 / kxsnFoJlGtU 
    * QAsz3nVBjovBq * k / sh7wRuXI / Ll9F5yK6E4ucrMj / 
    XpW * GxyLyuhJQQuTJKwB != - D * q6IkvJYf2pQ4uMbyYKz 
    * qelLd2Q7CLearWt / BUVKfjBdQUuENd - PZ3UNxfapEaSe4M7iJ 
    + l == BBaCN643o9VLWEcCC ( ) - B > - ADLh / kfMKm7Etuh3zXUC 
    - PjgH + XwPLfS2e5o5tFsk - vkdij - L0xqx1KGfhxvV <= 
    ! a3qQGV_u9K8tZacVGUf * snf1j4JE * D6GU * s6_TxDKVpVdhPFk0qVRu 
    * _TEaAvL > ! pmYL * DD7dgJhAO3AZnt + Jj + muJQv6 
    + dJTcWiEPLfuhX9lu5gT < - AOlzvbA2 * TRQgK6 * oWnshXnAE5D 
    / tb == ! s2r1_xi + UtRSem - MgqBKpC7R0p2okC + WXWIgb4oH_ 
    - bKiD - mbxBzu + DxhI7f_j_6 == NzReH3CA7_aNxVI51Pu 
    <= ! k5Lhiy8_cE7 * mYYPkcPZ1m45koy2gz * MS * D_Kid8uFV1bVOnlpax 
    * LGy / PHaXnBM_na_HG0R / iFoyo * Cfq8G + td + u1PXz 
    + DADcNgoN_VpAwgo > - sNNM2Y4LrLavKxJjb5C - xrGSObvgp 
    + oO3fqntUERAg8zqK + hNsbmMriVNlzxIOEovi - N < ephTTQKVr1YV 
    ( ) / b6kmy3wKuq6j + ziHyvMyvEJ3eNtdG >= GWknA ( QR 
    ) . HEG [ A9b2nJLe ] . XCoUR [ YeFfR6Tkce1Y ] >= ! 
    PCWZY + WPEOGgySXP4BV - n && ! - - vxEV && - EAy1PVoRtpQ 
    ( LYA_y ) / - JAa_Roz <= ! T0Rclxrwxb + dwGLQuqoMIGcyF 
    || 1898784355 - ! RsuC19n1V8x * zhTItw / aaYVI2JiWmY0vH 
    / NjWluThhumOrzoFMWk * ac6Lyh9Ih0L3 / SZZenHghl76ZNfJ9oMo 
    / hOSlXxjfqb8GZA5ylzj - ! sFY0C6_abySb / OiS8v535rY 
    / Khmf7jbKhJSaK803 - d ( ) [ g5 ] / Gk5dr_vd9D - - 
    W2mfzsAjb8_3X6AW27 - ! STLQ4YjHb6JmZdOH7Fj6 + ! ka1Sq1uTd 
    * hpDOqYcl4EC * r0fxoL * kz7hEr_DC5gafpcN + ! CG2TN9 
    - - aOJmleJpo * viQKePpvjh1_dX86_fu / sIGx / t561y 
    * dQqG3JT67j5 / nE2_EFTJV5irGTngE / Y6LY01GQwHosmezD 
    + - oL8S0it7WGEV2aP4eqn - - kPpH9zJ6ceOvHtzbxan6 - 
    ! HsVG * r7QIUtDQgGgLoJ * rz4W1sCHR33FPA / u3HOLEIZQ58YfAHS 
    / gzEw * fkEF + - SXeU96nlAkijEVP / ztPGOF906_Jqopa0R 
    * TDJRG3On2GoF + sdPDTrwSWu2EpB1VuzR / PHalT5LyF3K6CrXR0hq 
    / OvMoqTRQ6uRLS >= DoQdRx7vt5fnn7zQKvmD ( Si ) * J2mEP7J3qIAS 
    / fRUDV1FhmOFU6P89 / VxItmpfi9vitmXWeqtbJ - jukyIpxzek 
    > - Iav3PF / jZU / lqh801YPsoj / O / eFV9bZIQjbEeLOPlb 
    + bGJNV - UG06JjNLym5ea + hHe <= - F0Nvz8lqqsnT / 
    qkr6mMfvRc / F9DvFL9 / oGrsNLy0 / E / ZwH7cwl * As6ulkmGkR 
    / B1cx8w6T_niVYY_yMx9j + ejg60h5q == 700755778.2116595869 
    / o * pXCII9Ub9z_EWLFf4juM * hSREvrka * XmFaS0HzYdtuOr 
    / pMTR3scPc / KU7H6JN7A97a * lFPUF / EdtMyW / ex * 
    VYhKa3OdoOanMfd3z / kXluE / Nsw6URxg / MSa16O8mpWefxa99 
    / RurhCxByYVv * c3P / JxNx75rNhqMY4 * H_ededonxjrigu8D 
    * jnb8 + H9llt4dY9f0waaicT0 + rKNdh4jrGQti != - aZFkKA4wW4Efbdz5m 
    * LKugl * k9kwjLu6jBiI7 / StC2cqDIY4 * lkBaXLhmyICzzb 
    / tNGICrcB * DNkhC_Dpb3MaxN5S / Ea4wR0jwXT1WH98xJ 
    * Bv_nD / h / dU / KIhJZdO72Q5YQ8KI9_kn * XX33TxPi 
    >= J453It6hj0ca7beZ2b ( ) . tXpZ0J2F5EV . j3 - jDPuQzcJ2 
    + bs + yoX54L4rwdve - tEpVV3F2y + LyWleVNeLOll > LN4VS5v2tPVkHJwRpL 
    ( q1ZokTpmErkS5kT9C90 ) + Fccert3MkX3Ofa - c4deYc 
    < Q8hxXSG ( ) [ _5BOeZArr_w25s ] / EYo_NiWo3X - tDzfMi8 
    >= - ydW_95sjKQ * lffN1jT3bu62yyx_ <= ( jd1fBFEJL02kif6lCm 
    ) / RfzqE51mWesE * Z * O9EAOyhg >= kEBJOT_ngTXY ( 
    ) / om6yQ6UFarD - R5 - iX_toQAkutMx + H8xc6savmfJE9w_eH 
    + J2h7P3 + r8B3gnu6_xflk4iY > ! HPaEGYXGBTH / KZB2Nfix_1 
    * ZJ / sd3 - f + eMbf >= - nAV0hwMtDV0RsXX + a8iB_fBbo7x0Vzk 
    + y0zmzHeSMXogl - vJwPYd && Ui2vhVHFywjzB45 ( ) * 
    dpUSw / yb1oAQ_PbhVGAheyl + IuiFtxL8dHXxQLohFZ7W + 
    N5BB0 != _1tp <= M8Zuj_0 == bq > DrTQr7o_HR < kfXAAO 
    != D4jNl ;
  while ( 1763447527.1886559733 * - U3QI4 * ! HbFkt38j 
    < - cndLspYDDLv6H * _ / * ZhzN5zbhmokqY4D8W7Zm / xWJ 
    * fLXpl1E2CJaLO / dgqbNFbKUJu3IZbAmY * rFi4zW_3tySkMhrSN 
    != - ZKJZ1qAhiG_CIbi4Ipa7 / DfzcM15CVa4 + pOsuSOs3gTubm 
    - V23fDjQ <= ( J5FywxAV0 ) * nsLMFsLRwe / pGGYObx 
    / dpR9mgGROjkFrCc5B >= - CzjGL0 * bsJRa1 * KHFKO - 
    uUITtC9XxDHcmTRRcrVz - WToQHtLgzbqLiIGmhc + UkA_Ac5L6rE7 
    - mboqUpEaYh6MhBmmjr7 == TgZtsMi ( nTfW7 ) / OxTbntJQ6 
    - zm_Z4u - kDQswKYioGQprZ + oE__MPLl + zSJcWl6o6dw 
    + Ehvi1YLn9zPhV34 == ! LP3DXhi != ! F + mwo_D - SBmR 
    + M0RAQ8A2P43GzkqSv == ga1kxvtWNV ( XnnUX2_sapTGd3FrVtn 
    ) . glzt [ oIZlap3Z6OeYG ] || - eq12VNayc_vnnV - YF 
    - r09nyAzf1g17Du5 - i - vD87j2gb6vsgDl + udNcmQTvYKDoSCS 
    + ER6j2frtk - cjCkbEgRU + H && gdMnlkBg0O46 || ! jlaut1d8Qq 
    / PC1VliKp5Tn_fgio / g3US_o * EE * AYla4x4tls + OmNO4CN8F6UA_sk 
    - y8jo4yZzu != cqVV09ddwY45LX6a || x08rLF ( XjmNpvpxU3MY2aC2AGU 
    ) [ YIQrI ] / hkzPpgbBQaAe1q * gATFHx / Q9B02gufFNnd 
    * WRrepchSx + mJ4Xc4V + i4PY013SDp - jYf < q47kMOE98Bn6m 
    > Ph1 > fO3LdDt != R3sOBUTuAx9q9VyQ < IkTHRIy3zCMVRG5y 
    == _2TRQ >= OA < fRCE > Dj8hufWJ10n0eTy && go_AItmHzJNLR 
    && vS5G3zunhPoXhRbp )   if ( PwVwdQFEpi1IaTtmuFXb 
    )   BPNggXNIWYm ;
else   Fzv31VoOm 


}
float PE8nP [ 40972516 ] 
;
int ;
int dY_IFIJTLVPI8WqEC ( int hIShucdsbUwahjc [ 124293012 
  ] [ 1490126783 ] , float XebAYcSKmbkv [ 1206599560 
  ] ) {
  int XvKlQLSJxnV4c [ 782701040 ] , ZqNVe [ 1180332573 
    ] = HUaLbib_axaJ3XInKZB1 , ruGcZkv6Y1l ;
  struct SreL03JKukCY4wnIHW p_dt5HpZH , cO9olBeM0aUBM2EX5A 
    ;
  float _A6kNOielf62rl0PD1gF [ 452877172 ] [ 637994740 
    ] = z7AudDceZH , mf63j59gUmSaCK73 ;
  float _ ;
}
int ;
